  --------------------------  HepMC3.3.1-pre ----------------------
2024-02-27 Andrii Verbytskyi
         * Require cmake>3.10 for compatibility with cmake4
  --------------------------  HepMC3.3.0-pre ----------------------
2024-05-23 Andrii Verbytskyi
         * Update python bindings with binder 1.4.2
         * Update bxzstr to bxzstr 1.2.2 + patches
         * Formatting
2024-05-26 Andy Buckley
         * Explicitly return for inf-generating eta / massless rapidity along pz, to avoid FPE triggering.
2024-04-20 Andy Buckley
         * Suppress cross-section/weight count-mismatch warning if only one cross-section.
2024-04-08 Andrii Verbytskyi
         * Add support for reading with uproot
         * Drop Python2 support
2023-10-24 Mattias Ellert
         * Fix compilation with Python 3.13.0a1.
           See: https://github.com/pybind/pybind11/pull/4902
2023-09-15 Andrii Verbytskyi for HepMC
         * Major update of the build system, removed most of the custom modules.
2023-09-03 Andrii Verbytskyi for HepMC
         * Removed functions that operate on raw pointers.
  --------------------------  HepMC3.2.7 ----------------------
2023-10-02 Andrii Verbytskyi for HepMC
         * Patch release to fix the problem with vertex attributes removal.
  --------------------------  HepMC3.2.6 ----------------------
2023-03-30 Andrii Verbytskyi for HepMC
         * Deprecated the set_cross_section function with double in favour of those with vector of doubles.
2023-03-03 Andrii Verbytskyi for HepMC
         * Preparation to the release 3.2.6.
2023-03-03 Andrii Verbytskyi for HepMC
         * Better Doxygen documentation for code
2023-03-02 Andrii Verbytskyi for HepMC
         * Improvements in ReaderFactory that should help detect the file type more successfully.
2023-02-14 Andrii Verbytskyi for HepMC
         * Multiple optimizations inspired by clang-tidy
2023-02-10 Andrii Verbytskyi for HepMC