@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.10.0 FATAL_ERROR)
 #----------------------------------------------------------------------------
 project(HepMC3 LANGUAGES CXX)
-set(PROJECT_VERSION 3.03.00)
-SET(HEPMC3_VERSION 3.03.00)
+set(PROJECT_VERSION 3.03.01)
+SET(HEPMC3_VERSION 3.03.01)
 SET(HEPMC3_VERSION_MAJOR  3)
 SET(HEPMC3_VERSION_MINOR  3)
-SET(HEPMC3_VERSION_PATCH  0)
+SET(HEPMC3_VERSION_PATCH  1)
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 #This module respects HFS, e.g. defines lib or lib64 when it is needed.
@@ -159,6 +159,12 @@ if(HEPMC3_ENABLE_ROOTIO)
           endif()
           if ("${fl}" MATCHES   ".*\\+\\+20$" OR "${fl}" MATCHES   ".*\\+\\+2a$" )
             set(HEPMC3_CXX_STANDARD 20)
+          endif()
+          if ("${fl}" MATCHES   ".*\\+\\+23$" OR "${fl}" MATCHES   ".*\\+\\+2b$" )
+            set(HEPMC3_CXX_STANDARD 23)
+          endif()
+          if ("${fl}" MATCHES   ".*\\+\\+26$" OR "${fl}" MATCHES   ".*\\+\\+2c$" )
+            set(HEPMC3_CXX_STANDARD 26)
           endif()
       endforeach(fl ${ROOT_CXX_FLAGS_LIST})
     endif()
@@ -489,7 +495,7 @@ set(CPACK_PACKAGE_VENDOR "HepMC3 Developers")
 set(CPACK_PACKAGE_VERSION 3)
 set(CPACK_PACKAGE_VERSION_MAJOR 3)
 set(CPACK_PACKAGE_VERSION_MINOR 3)
-set(CPACK_PACKAGE_VERSION_PATCH 0)
+set(CPACK_PACKAGE_VERSION_PATCH 1)
 set(CPACK_PACKAGE_RELEASE 0)
 set(CPACK_PACKAGE_FILE_NAME "HepMC3")
 set(CPACK_PACKAGE_DESCRIPTION "Event record library for high energy physics Monte Carlo")
