@@ -16,9 +16,9 @@ if (RERUN_BINDER)
   set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 endif()
 if (USE_INSTALLED_HEPMC3)
-  set(${PROJECT_NAME}_VERSION 3.3.0)
+  set(${PROJECT_NAME}_VERSION 3.3.1)
   set(THIS_PROJECT_NAME ${PROJECT_NAME})
-  set(THIS_PROJECT_NAME_VERSION 3.3.0)
+  set(THIS_PROJECT_NAME_VERSION 3.3.1)
   option(HEPMC3_ENABLE_TEST "Enable tests" ON)
 
 
@@ -57,6 +57,12 @@ if (USE_INSTALLED_HEPMC3)
           endif()
           if ("${fl}" MATCHES   ".*\\+\\+20$" OR "${fl}" MATCHES   ".*\\+\\+2a$" )
             set(HEPMC3_CXX_STANDARD 20)
+          endif()
+          if ("${fl}" MATCHES   ".*\\+\\+23$" OR "${fl}" MATCHES   ".*\\+\\+2b$" )
+            set(HEPMC3_CXX_STANDARD 23)
+          endif()
+          if ("${fl}" MATCHES   ".*\\+\\+26$" OR "${fl}" MATCHES   ".*\\+\\+2c$" )
+            set(HEPMC3_CXX_STANDARD 26)
           endif()
           set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${fl}")
         endforeach(fl ${ROOT_CXX_FLAGS_LIST})
